# vcpkg-binarycaching-test

./: CMakeLists.txt  main.cpp  nuget.config  vcpkg.json
.github/workflows/: build-vcpkg-cache.yml  cleanup-packages.yaml  cmake.yml
overlay_triplets/: x64-linux.cmake  x64-windows.cmake
